prevent viewport bleeding

--- a/whackamole/style.css
+++ b/whackamole/style.css
@@ -1,17 +1,17 @@
 body {
 	text-align: center;
-	border: 1px dotted black;
 }
 
 #container{
 	width: 0px;
 	margin-left: auto;
 	margin-right: auto;
+/*	border: 1px dotted black*/;
 }
 
 #main {
 	border: 1px solid black;
-	width: 95%;
+	width: 90%;
 	height: 90%;
 	padding: 10px;
 	display: flex;
